// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column Pure component match expected snapshot 1`] = `
<div
  className=" "
>
  <div>
    Column content
  </div>
</div>
`;

exports[`Column Pure component with wrong xs="wrong" match expected snapshot 1`] = `
<div
  className=" "
>
  <div>
    Column content
  </div>
</div>
`;

exports[`Column Pure component with xs="1" md="3" xl="12" xsOffset="1" mdOffset="3" xlOffset="12" match expected snapshot 1`] = `
<div
  className=" col-xs-1-0-0 col-md-3-0-52 col-xl-12-0-118 col-xsOffset-1-0-1 col-mdOffset-3-0-53 col-xlOffset-12-0-119 "
>
  <div>
    Column content
  </div>
</div>
`;
